# semantic-scholar-ops

./: .gitignore
.github/workflows/: ci.yml
benchmark/: benchmark.yml
metapaper/: .env  .gitignore  next.config.js  now.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
metapaper/components/: GwernPaperDiv.tsx  Home.tsx  MetaBadge.tsx  PaperDiv.tsx  SvgButton.tsx  layout.js
metapaper/cypress/integration/: snapshots.js
metapaper/cypress/plugins/: index.js
metapaper/lib/: lib.ts  logging.ts  query_kinds.ts  redux.ts  redux.tsx
metapaper/pages/: _app.js  _error.js  about.tsx  citations_for_doi.tsx  citations_for_title.tsx  index.jsx  index.tsx  search.tsx
metapaper/pages/api/: get_paper.ts
metapaper/tests/: snapshots.js
papers_db/: .env  .gitignore  Cargo.toml  diesel.toml
papers_db/migrations/2019-11-03-232431_create_papers/: down.sql  up.sql
papers_db/migrations/2019-11-06-232806_file_n/: down.sql  up.sql
papers_db/migrations/2019-11-29-201607_add_functions/: down.sql  up.sql
papers_db/migrations/2020-01-01-151459_search_all_fields_and_author/: down.sql  up.sql
papers_db/migrations/2020-01-02-210401_add_authors/: down.sql  up.sql
papers_db/src/: lib.rs  models.rs  schema.rs
serverless/benchmark/: benchmark.yml
serverless/cloudworker/: index.js  package.json  wrangler.toml
serverless/db-api/: .env  handler.js  package.json  serverless.yml
terraform/: datasource.tf  db.tf  redis.tf
