[package]
name = "papers_db"
version = "0.1.0"
authors = ["Jose Luis Ricon <jose@ricon.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.4.3", features=["postgres"]}
dotenv = "0.15.0"
flate2 = {version="1.0.12",features=["tokio"]}
serde_json = "1.0.41"
serde = {version="1.0.102",features=['derive']}
rusoto_s3 = "0.41.0"
futures = "0.1.29"
sentry = "0.17.0"
regex = "1.3.1"
lazy_static = "1.4.0"
